--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tensorflow/tfjs-backend-webgl": "^4.21.0",
     "@tensorflow/tfjs-core": "^4.21.0",
     "autoprefixer": "^10.4.20",
+    "face-api.js": "^0.22.2",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
