--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@tensorflow-models/face-detection": "^1.0.3",
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
+    "@tensorflow-models/facemesh": "^0.0.4",
     "@tensorflow/tfjs": "^4.21.0",
     "@tensorflow/tfjs-backend-webgl": "^4.21.0",
+    "@tensorflow/tfjs-converter": "^4.21.0",
     "@tensorflow/tfjs-core": "^4.21.0",
     "autoprefixer": "^10.4.20",
     "face-api.js": "^0.22.2",
