--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-# [[plugins]]
-# package = "@21yunbox/netlify-plugin-21yunbox-deploy-to-china-cdn"
+[[plugins]]
+package = "@21yunbox/netlify-plugin-21yunbox-deploy-to-china-cdn"
 
 [[redirects]]
   from = "/*"
