--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 # Delete these lines completely (don't even keep them commented)
+# Delete these lines completely (don't even keep them commented)
 [[redirects]]
   from = "/*"
   to = "/index.html"
