--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
-# Delete these lines completely (don't even keep them commented)
-# Delete these lines completely (don't even keep them commented)
+[build]
+  command = "npm run build"
+  publish = "dist"
+  environment = { NODE_VERSION = "18" }
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build]
-  command = "npm run build"
-  publish = "dist"
