--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,16 @@
 [build]
-  command = "npm run build"
+  command = "CI=false npm run build"
   publish = "dist"
-  environment = { NODE_VERSION = "18" }
+
+[build.environment]
+  NODE_VERSION = "18"
+  VITE_FIREBASE_AUTH_DOMAIN = "quantumfly.hatemsoliman.dev"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
+
+[context.production]
+  environment = { NODE_ENV = "production" }
