--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 VITE_FIREBASE_API_KEY=AIzaSyDZPU37kVJN4rQ3cbvLQqL28pPrT3OvNFE
-VITE_FIREBASE_AUTH_DOMAIN=quantum-fly.firebase.app
+VITE_FIREBASE_AUTH_DOMAIN=quantum-fly.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=quantum-fly
 VITE_FIREBASE_STORAGE_BUCKET=quantum-fly.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=218965492366
